Bachelor of science

--- a/index.html
+++ b/index.html
@@ -186,26 +186,6 @@
 			</div>
 		</section>
 
-		<!-- <section id="summary" class="wrapper style1 special">
-			<div class="inner" data-aos-offset="250" data-aos="fade-up" data-aos-duration="1500">
-				<header class="major">
-					<div>
-						<h1>SUMMARY</h1>
-						<hr>
-					</div>
-					<div>
-						<p>Skilled and knowledgeable University of Pittsburgh student seeking a challenging employment
-							opportunity within the
-							field of Computer Science. Proficient programmer comfortable in Object Oriented Programming
-							Languages, .NET Framework, and Web Development, with individual experience
-							developing iOS and Android applications. Personable, driven, strong work ethic, and
-							committed to resolving problems in a thorough and painstaking manner.</p>
-					</div>
-
-				</header>
-			</div>
-		</section> -->
-
 		<!-- Projects -->
 		<section id="projects" class="wrapper style2 special">
 			<div class="inner" data-aos-offset="250" data-aos="zoom-in" data-aos-duration="1500">
@@ -320,7 +300,7 @@
 						<div class="8u col-offset-2">
 							<div class="schools" id="school1">
 								<div>
-									<h2>BACHELOR'S OF SCIENCE - COMPUTER SCIENCE</h2>
+									<h2>BACHELOR OF SCIENCE - COMPUTER SCIENCE</h2>
 								</div>
 								<div class="contents">
 									<p><strong>IMPORTANT COURSEWORK:</strong>&nbsp;Object-Oriented Programming (OOP),
