--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								<li><a class="scrolly" href="#experience">Experience</a></li>
 								<li><a class="scrolly" href="#projects">Projects</a></li>
 								<li><a class="scrolly" href="#skills">Skills</a></li>
-								<li><a class="scrolly" href="#education">Educatoin</a></li>
+								<li><a class="scrolly" href="#education">Education</a></li>
 								<li><a class="scrolly" href="#contact-form">Contact Me</a></li>
 							</ul>
 							<div class="icons">
