Fix faulty learn more button

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<p>DIGITAL PORTFOLIO & EXPERIENCE</p>
 
 			</div>
-			<a href="#summary" class="more scrolly">Learn More</a>
+			<a href="#experience" class="more scrolly">Learn More</a>
 		</section>
 
 		<!-- Experience -->
