--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                                 <li><a class="scrolly" href="#contact-form">Contact Me</a></li>
                             </ul>
                             <div class="icons">
-                                <span><a href="Resume.pdf" class="fa fa-file-pdf-o fa-2x"></a></span>
                                 <span><a href="https://github.com/cdreher" class="fa fa-github fa-2x"></a></span>
                                 <span><a href="https://www.linkedin.com/in/collin-dreher-917182133/"
                                         class="fa fa-linkedin fa-2x"></a></span>
@@ -68,7 +67,7 @@
         <section id="banner">
             <div class="inner">
                 <h2>Collin Dreher</h2>
-                <p>DIGITAL PORTFOLIO & EXPERIENCE</p>
+                <p>DIGITAL PORTFOLIO</p>
 
             </div>
             <a href="#bio" class="more scrolly">Learn More</a>
@@ -82,11 +81,7 @@
                     <hr>
                 </header>
                 <div>
-                    <h2>Software Engineer</h2>
-                    <p>Full-stack software engineer successful with object-oriented programming languages, responsive
-                        web development, .NET framework, and Git source control. Experienced with mobile application
-                        development (both native & cross-platform), Unity game design, Microsoft Azure, and database
-                        systems.</p>
+                    <h2>Co-Founder, CTO, Tech Entrepreneur</h2>
                 </div>
         </section>
 
@@ -112,10 +107,8 @@
                                         Development,
                                         Node.js, React Native, Swift, Unity, Wix, Xcode
                                     </p>
-                                    <p><strong>RESPONSIBILITIES:</strong>&nbsp;
-                                        Direct the development of all custom consulting services tailored specifically
-                                        to each client’s needs, resulting in $60,000+ in revenue to date. <a
-                                            href="Resume.pdf">Check resume for details.</a>
+                                    <p><strong>ABOUT:</strong>&nbsp;
+                                        Bring your ideas to life. We transform startups and small businesses by giving them the respect and attention that they deserve, regardless of how small the concept or budget may be. Let's build together!
                                     </p>
                                 </div>
                                 <div class="company">
@@ -127,17 +120,35 @@
 
                             <div class="items">
                                 <div class="title">
+                                    <h2>Software Developer</h2>
+                                </div>
+                                <div class="contents">
+                                    <p><strong>DATE:</strong>&nbsp;October 2019 - Present</p>
+                                    <p><strong>TECHNOLOGIES USED:</strong>&nbsp;HTML, JS, LWC, Salesforce, 
+                                    </p>
+                                    <p><strong>RESPONSIBILITIES:</strong>&nbsp;
+                                        Design and develop custom Salesforce solutions for an internal PNC application used by hundreds of customer call center employees.
+                                    </p>
+                                </div>
+                                <div class="company">
+                                    <img src="images/pnc.png" /></a>
+                                    <p>PNC</p>
+                                </div>
+                            </div>
+
+                            <div class="items">
+                                <div class="title">
                                     <h2>Associate Developer</h2>
                                 </div>
                                 <div class="contents">
-                                    <p><strong>DATE:</strong>&nbsp;June 2019 - Present</p>
+                                    <p><strong>DATE:</strong>&nbsp;June 2019 - October 2019</p>
                                     <p><strong>TECHNOLOGIES USED:</strong>&nbsp;C#, CSS, HTML, Knockout.js, Microsoft Azure,
                                         .NET MVC, Powershell, Sitefinity, SQL
                                     </p>
                                     <p><strong>RESPONSIBILITIES:</strong>&nbsp;
                                         Design and develop custom application solutions for clients using Agile
                                         methodology, Git source control, Microsoft Azure, and full-stack programming
-                                        frameworks. <a href="Resume.pdf">Check resume for details.</a>
+                                        frameworks. 
                                     </p>
                                 </div>
                                 <div class="company">
@@ -157,8 +168,7 @@
                                     <p><strong>RESPONSIBILITIES:</strong>&nbsp;
                                         Worked on a team of three developers that built software considered to be the
                                         best cloud-based speech recognition solution, used seamlessly by over 200 EHRs
-                                        and physicians all around the country. <a href="Resume.pdf">Check resume for
-                                            details.</a>
+                                        and physicians all around the country. 
                                     </p>
                                 </div>
                                 <div class="company">
@@ -210,6 +220,7 @@
                         <span class="dot" onclick="currentSlide(3)"></span>
                         <span class="dot" onclick="currentSlide(4)"></span>
                         <span class="dot" onclick="currentSlide(5)"></span>
+                        <span class="dot" onclick="currentSlide(6)"></span>
                     </div>
                 </div>
             </div>
@@ -398,35 +409,9 @@
             </div>
         </section>
 
-        <!-- Contact form -->
-        <section id="contact-form" class="wrapper style4 special">
-            <div>
-                <header class="major">
-                    <h1>Contact Me</h1>
-                    <hr>
-                </header>
-            </div>
-
-            <div>
-                <form name="contact_form" class="contact-form">
-                    <div class="row">
-                        <div class="half left">
-                            <h3>collin.dreher@gmail.com</h3>
-                            <h3>(717) 805-8885</h3>
-                        </div>
-                        <div class="half right">
-                            <h3>3010 Jane St, APT. 402</h3>
-                            <h3>Pittsburgh, PA 15203</h3>
-                        </div>
-                    </div>
-                </form>
-
-            </div>
-        </section>
-
         <footer id="footer">
             <ul class="copyright">
-                <li>&copy; Collin Dreher - 2019</li>
+                <li>&copy; Collin Dreher - 2021</li>
             </ul>
         </footer>
         <!-- Scripts -->
