--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <li><a class="scrolly" href="#projects">Projects</a></li>
                                 <li><a class="scrolly" href="#skills">Skills</a></li>
                                 <li><a class="scrolly" href="#education">Education</a></li>
-                                <li><a class="scrolly" href="#contact-form">Contact Me</a></li>
+                                <li><a class="scrolly" href="#contact-form">Contact Me (Please don't)</a></li>
                             </ul>
                             <div class="icons">
                                 <span><a href="https://github.com/cdreher" class="fa fa-github fa-2x"></a></span>
